--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@ scale=1.0">
 <body>
 <header class="cabecalho">
 <div class="container">
-<img src="IMG/Logo.svg" alt="logotipo"
+<img src="IMG/O-que-seu-cachorro-pode-comer-Veterinaria-explica-tudo-sobre-alimentacao-saudavel-para-caes.jpeg-e1708779745375.webp" alt="logotipo"
 
 class="container imagem">
 <h1 class="container titulo">
-    Biblioteca Start
+    Curiosidades canina
     </h1>
     <p class="container frase">
-    "Aqui cada livro é um <i>start</i> para o seu
+    "curisidades sobre alimentação canina:
+     
+    A alimentação natural é rica em água e apresenta alto teor de umidade, pode ajudar a controlar doenças como obesidade, diabetes, alergias de pele e alimentar,
+pode proporcionar uma microbiota intestinal mais rica e diversa, incrementando o sistema imunológico
+    Alimentação com frutas e legumes 
+    Algumas frutas, verduras e legumes que cachorro pode comer são maçã, melão, inhame, nabo, brócolis, couve e batata-doce
+    Essas frutas, verduras e legumes são fontes de vitaminas do complexo B.
     
-    conhecimento!"</p>
+
+    </p>
     </div>
     </header>
     </body>
